--- a/src/molabel/static/image-widget.css
+++ b/src/molabel/static/image-widget.css
@@ -41,3 +41,8 @@
   background-color: #a0a0f0;
   border-color: #a0a0f0;
 }
+
+.imagewidget-toolbar button[disabled] {
+  background-color: #d0d0d0;
+  cursor: not-allowed;
+}
